# Legal-AI

./: .gitignore  pyproject.toml  requirements.txt  setup.py
configs/: agent_graph.yaml  data_sources.yaml  prompts.yaml  settings.yaml
src/legal_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/legal_ai/agents/: graph.py  query_expander.py  self_rag.py  state.py  tools.py  verifier.py
src/legal_ai/agents/nodes/: critic.py  drafter.py  researcher.py  reviewer.py
src/legal_ai/config/: loader.py  schemas.py
src/legal_ai/evaluation/: datasets.py  judge.py  metrics.py
src/legal_ai/ingestion/: chunkers.py  metadata.py  normalizers.py  parsers.py
src/legal_ai/memory/: long_term.py  short_term.py
src/legal_ai/models/: deepseek_client.py  embeddings.py  llm.py  llm_deepseek.py  reranker.py
src/legal_ai/rag/: citation_extractor.py  citations.py  pipeline.py  prompts.py  schemas.py  self_rag_pipeline.py
src/legal_ai/retrieval/: article_level.py  base.py  legal_rag.py
src/legal_ai/retrieval/colbert/: indexer.py  retriever.py
src/legal_ai/retrieval/dense/: __init__.py  qdrant_store.py  retriever.py
src/legal_ai/retrieval/hybrid/: fusion.py
src/legal_ai/retrieval/sparse/: bm25.py
src/legal_ai/storage/: cache.py  metadata_db.py
src/legal_ai/utils/: json_utils.py  legal_ontology.py  logging.py  text.py
